# hyper-os

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Compile.sh  LICENSE  Makefile  Makefile.common  Makefile.files  Makefile.subdir  README.md  build.sh  kernel.cpp  limine.cfg  linker.ld  run.sh
AK/: Array.h  Array.hpp  Assertion.hpp  Bitmap.cpp  Bitmap.h  Bitmap.hpp  CMakeLists.txt  Exception.cpp  Exception.h  IO.cpp  IO.h  IoService.cpp  IoService.hpp  Iterator.hpp  Logger.cpp  Logger.hpp  Makefile  Math.hpp  Memory.hpp  NonCopyable.h  NonMoveable.h  OwnPtr.h  Panic.cpp  Panic.h  Serial.cpp  Serial.hpp  Spinlock.cpp  Spinlock.hpp  String.cpp  String.h  String.hpp  StringBuilder.cpp  StringBuilder.h  StringView.hpp  TypeTraits.h  TypeTraits.hpp  Types.h  Utility.h  Utility.hpp  Vector.h  (+9 more)
AK/include/AK/: Array.hpp  Assertion.hpp  Bitmap.hpp  IoService.hpp  Iterator.hpp  Logger.hpp  Math.hpp  Memory.hpp  Serial.hpp  Spinlock.hpp  String.hpp  StringView.hpp  TypeTraits.hpp  Utility.hpp  Vector.hpp
AK/src/AK/: Bitmap.cpp  IoService.cpp  Logger.cpp  Serial.cpp  String.cpp
Kernel/: CMakeLists.txt  Kernel.cpp  Makefile  Stivale.h  kernel.c  limine.cfg  linker.ld  main.c  main.cpp
Kernel/Boot/: Interrupts.s  Stivale.cpp  Stivale.hpp  boot.s  stivale2.c  stivale2.h
Kernel/Core/: GDT.cpp  GDT.h  IDT.cpp  IDT.h  IRQManager.cpp  IRQManager.h  IRQManager.hpp  Interrupts.s  PIC.cpp  PIC.h  Stivale.h  Terminal.cpp  Terminal.h  VGA.h  gdt.c  idt.c  interrupts.s  pic.c  pic.h
Kernel/Interrupts/: idt.c  idt.h  interrupts.s  irq.c  irq.h  pic.c
Kernel/Memory/: KernelMemory.cpp  KernelMemory.hpp  MemoryDefines.h  MemoryDefinitions.h  PhysicalAllocator.cpp  PhysicalAllocator.h  PhysicalMemoryManager.cpp  PhysicalMemoryManager.h  PhysicalMemoryManager.hpp  VirtualMemoryManager.cpp  VirtualMemoryManager.h  VirtualMemoryManager.hpp  bitmap.c  bitmap.h  kalloc.h  kmm.c  kmm.h  memory.h  mm.h  pmm.c  pmm.h  vmm.c  vmm.h
Kernel/Stivale/: Stivale2.cpp  Stivale2.h
Kernel/System/: ACPI.cpp  ACPI.hpp  APIC.cpp  APIC.hpp  CPU.cpp  CPU.hpp  GDT.cpp  GDT.hpp  HPET.cpp  HPET.hpp  IDT.cpp  IDT.hpp  Interrupts.asm  MADT.cpp  MADT.hpp  PIC.cpp  PIC.hpp  SMP.cpp  SMP.hpp  Stdlib.cpp  Stdlib.hpp
Kernel/drivers/: pcspkr.c  pcspkr.h  virtual_key.h
Kernel/drivers/ps2/: ps2_keyboard.c  ps2_mouse.h
Kernel/include/Kernel/: main.hpp
Kernel/include/Kernel/Arch/: Stivale.hpp
Kernel/include/Kernel/Boot/: Stivale.hpp
Kernel/include/Kernel/Common/: CxxAbi.hpp  IoService.hpp  Logger.hpp  MMIO.hpp  Map.hpp  Math.hpp  Memory.hpp  Optional.hpp  Pair.hpp  Registers.hpp  Serial.hpp  String.hpp  Types.hpp  Utilities.hpp  Utility.hpp  Vector.hpp
Kernel/include/Kernel/Drivers/: HPET.hpp  PCI.hpp
Kernel/include/Kernel/Graphics/: Color.hpp  Painter.hpp  Rect.hpp  Window.hpp  WindowManager.hpp
Kernel/include/Kernel/Interrupts/: APIC.hpp  IDT.hpp  PIC.hpp
Kernel/include/Kernel/Memory/: Bitmap.hpp  KernelMemory.hpp  PhysicalMemoryManager.hpp  VirtualMemoryManager.hpp
Kernel/include/Kernel/Scheduling/: Scheduler.hpp  Task.hpp
Kernel/include/Kernel/Synchronization/: Spinlock.hpp
Kernel/include/Kernel/System/: ACPI.hpp  APIC.hpp  CPU.hpp  GDT.hpp  HPET.hpp  IDT.hpp  IoService.hpp  MADT.hpp  PIC.hpp  SMP.hpp  Stdlib.hpp
Kernel/src/Kernel/: main.cpp
Kernel/src/Kernel/Arch/: Stivale.cpp  linker.ld
Kernel/system/: gdt.c  gdt.h  idt.c  idt.h  io_service.c  pic.h  pit.c  pit.h
Kernel/utilities/: builtins.c  builtins.h  logger.c  time.h  timer.c
Source/: CMakeLists.txt
Source/Kernel/: CMakeLists.txt
Source/Kernel/src/: main.cpp
Source/Scripts/: Build_Image.sh  Debug.sh  Run.sh
Userland/Libraries/LibC/: CMakeLists.txt  Makefile  ctype.c  ctype.cpp  ctype.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.cpp  stdio.h  stdlib.c  stdlib.cpp  stdlib.h  string.c  string.h
Userland/Libraries/LibCpp/: CMakeLists.txt
Userland/Libraries/LibCxx/: CMakeLists.txt
builder/: Cargo.toml
builder/src/: logger.rs  main.rs
kernel/: CMakeLists.txt  Cargo.toml  Makefile  build.rs  linker.ld  main.c
kernel/.cargo/: config.toml
kernel/Boot/: stivale2.h
kernel/Memory/: kalloc.c  pmm.c  vmm.c
kernel/boot/: limine.cfg  linker.ld  stivale2.c  stivale2.h
kernel/drivers/: pcspkr.c  pcspkr.h  qwertz.h
kernel/drivers/ps2/: ps2_keyboard.c  ps2_keyboard.h  ps2_mouse.c
kernel/include/arch/: acpi.h  apic.h  boot.h  cpu.h  fadt.h  gdt.h  hpet.h  idt.h  io.h  madt.h  pic.h  registers.h
kernel/include/common/: logger.h
kernel/include/devices/: rtc.h
kernel/include/lib/: assert.h  logger.h  math.h  memory.h  stacktrace.h  string.h  vector.h
kernel/include/memory/: bitmap.h  kmalloc.h  pmm.h  vmm.h
kernel/include/scheduling/: scheduler.h  smp.h  spinlock.h  task.h  thread.h
kernel/lib/: builtins.h  logger.c  logger.h  math.c  math.h  serial.c  time.c  time.h  timer.c  timer.h
kernel/memory/: bitmap.c  bitmap.h  kalloc.c  kalloc.h  memory.h  pmm.c  pmm.h  vmm.c  vmm.h
kernel/src/: boot.rs  main.c  main.rs
kernel/src/arch/: acpi.c  apic.c  boot.c  cpu.c  cpu.rs  fadt.c  gdt.c  gdt.rs  hpet.c  idt.c  interrupts.asm  interrupts.rs  io.c  madt.c  mod.rs  pic.c
kernel/src/common/: logger.c
kernel/src/devices/: rtc.c
kernel/src/lib/: assert.c  logger.c  memory.c  stacktrace.c  string.c  vector.c
kernel/src/memory/: bitmap.c  kmalloc.c  pmm.c  vmm.c
kernel/src/scheduling/: scheduler.asm  scheduler.c  smp.c  spinlock.c
kernel/src/utils/: logger.rs  mod.rs  writer.rs
kernel/synchronization/: spinlock.c  spinlock.h
kernel/system/: gdt.c  idt.c  interrupts.asm  io_service.c  io_service.h  pic.c  pit.c  pit.h
kernel/utilities/: logger.h  math.h  serial.h  timer.h
userland/: CMakeLists.txt  Makefile
userland/applications/: CMakeLists.txt  Makefile
userland/applications/terminal/: CMakeLists.txt  Makefile  main.c
userland/games/: CMakeLists.txt  Makefile
userland/libraries/: CMakeLists.txt  Makefile
userland/libraries/libc/: CMakeLists.txt  stdlib.h
userland/libraries/libgui/: CMakeLists.txt  application.c  application.h
(+214 files in other folders)
