#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[workspace]
members = [ "kernel" ]
resolver = "2"
