#-------------------------------------------------------------------------------------------
# Copyright (c) 2020-2021, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# ThirdParty
#-------------------------------------------------------------------------------------------
add_subdirectory(ThirdParty)

#-------------------------------------------------------------------------------------------
# Kernel
#-------------------------------------------------------------------------------------------
add_subdirectory(Kernel)
