#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.3", features = [ "derive" ] }
color-eyre = "0.6"
fern = { version = "0.6", features = [ "colored" ] }
log = "0.4"
