#-------------------------------------------------------------------------------------------
# Copyright (c) 2023 SkillerRaptor
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.1"
